fix(content-section): update child elements alignment to the top

--- a/packages/web-components/src/components/cta-section/cta-section.scss
+++ b/packages/web-components/src/components/cta-section/cta-section.scss
@@ -40,6 +40,10 @@
     }
   }
 
+  .#{$prefix}--content-section__body {
+    padding-top: 3rem;
+  }
+
   ::slotted(#{$dds-prefix}-content-section-heading) {
     margin-bottom: $spacing-07;
 
